--- a/views/home.hbs
+++ b/views/home.hbs
@@ -36,6 +36,12 @@
 							<div class="speech-bubble">Setting</div>
 						</span>
 					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="/other/users"><i class="fas fa-users"></i></a>
+						<span class="tooltiptext">
+							<div class="speech-bubble">Users</div>
+						</span>
+					</li>
 					<li class="nav-item active" id="search_btn">
 						<a class="nav-link"><i class="fas fa-search"></i></a>
 						<span class="tooltiptext">
@@ -107,7 +113,7 @@
 		</li>
 	</ul>
 </nav>
-<footer id="fuck" class="text-white mt-4 d-none">
+<footer class="text-white mt-4">
 	<div class="container-fluid py-3">
 		<div class="row">
 			<div class="col-md-3">
