--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -17,6 +17,18 @@
 						<div class="speech-bubble">Logout</div>
 					</span>
 				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="/other/users"><i class="fas fa-users"></i></a>
+					<span class="tooltiptext">
+						<div class="speech-bubble">Users</div>
+					</span>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="/home"><i class="fas fa-home"></i></a>
+					<span class="tooltiptext">
+						<div class="speech-bubble">Home</div>
+					</span>
+				</li>
 			</ul>
 		</div>
 	</nav>
