--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -13,7 +13,7 @@
 
 		<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-				<li class="nav-item active">
+				<li class="nav-item active" style='float:right;'>
 					<a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i></a>
 					<span class="tooltiptext">
 						<div class="speech-bubble">Logout</div>
