--- a/public/stylesheets/croppie.css
+++ b/public/stylesheets/croppie.css
@@ -3,6 +3,20 @@
     height: 100%;
 }
 
+.btn-crop {
+	color: #FF9900 !important;
+	border: 0 !important;
+	background-color: white !important;
+}
+
+.btn-crop:hover {
+	color: #FF9900 !important;
+	border: 0 !important;
+    background-color: black !important;
+    transition: 500ms;
+}
+
+
 .croppie-container .cr-image {
     z-index: -1;
     position: absolute;
