--- a/templates/emails/html.hbs
+++ b/templates/emails/html.hbs
@@ -342,19 +342,20 @@
 						Thr33some team<br>
 						+27 72 329 6467, Roger Ndaba<br>
 						+27 72 329 6467, Gareth Lagtegan<br>
-						+27 72 329 6467, Roelf Blahblah<br>
+						+27 72 329 6467, Roelf Diedericks<br>
 
 					</p>
 					<p>
 						Support:<br>
-						<a class="strong" href="mailto:#" target="_blank">support@support.ru</a>
-						<a class="strong" href="mailto:#" target="_blank">support@support.ru</a>
-						<a class="strong" href="mailto:#" target="_blank">support@support.ru</a>
+						<a class="strong" href="mailto:#" target="_blank">rmdaba@student.wethinkcode.co.za</a>
+						<a class="strong" href="mailto:#" target="_blank">rdiediri@student.wethinkcode.co.za</a>
+						<a class="strong" href="mailto:#" target="_blank">glatega@student.wethinkcode.co.za</a>
 					</p>
 				</td>
 				<td class="subscription" width="300">
 					<div class="logo-image">
-						<a href="https://zavoloklom.github.io/material-design-iconic-font/" target="_blank"><img src="https://i.ibb.co/X30DZzk/logo.png" alt="logo-alt" width="70" height="70"></a>
+						<a href="https://zavoloklom.github.io/material-design-iconic-font/" target="_blank"><img src="https://i.ibb.co/X30DZzk/logo.png"
+							 alt="logo-alt" width="70" height="70"></a>
 					</div>
 					<p>
 						<a class="strong block" href="#" target="_blank">
