--- a/views/video.hbs
+++ b/views/video.hbs
@@ -1,5 +1,5 @@
 {{#if title}}
-	<title>{{title}}</title>
+<title>{{title}}</title>
 {{/if}}
 <link rel="stylesheet" href="/stylesheets/croppie.css" />
 <script src="/javascripts/croppie.js"></script>
@@ -8,13 +8,17 @@
 
 <!-- Font Awesome -->
 <!--- Include the above in your HEAD tag --->
-{{!-- <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"> --}}
+{{!--
+<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+--}}
 <!-- <link rel="stylesheet" href="/stylesheets/home.css"> -->
 
 <div class="head">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="/user/profile"><img src="/images/avatar.png" width="40" height="40" class="d-inline-block align-top" alt=""></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+		<a class="navbar-brand" href="/user/profile"><img src="/images/avatar.png" width="40" height="40" class="d-inline-block align-top"
+			 alt=""></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
+		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
@@ -32,18 +36,20 @@
 </div>
 
 {{!-- <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span>
-</button>
-<a class="navbar-brand" href="/user/profile"><img src="/images/avatar.png" width="40" height="40" class="d-inline-block align-top" alt=""></a>
-<div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav">
-<li class="nav-item active">
-<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
-</li>
-</ul>
-</div>
-<div class="profile_icon"></div>
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
+	 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<a class="navbar-brand" href="/user/profile"><img src="/images/avatar.png" width="40" height="40" class="d-inline-block align-top"
+		 alt=""></a>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
+			</li>
+		</ul>
+	</div>
+	<div class="profile_icon"></div>
 </nav> --}}
 <div class="main">
 	<div class='player'>
@@ -51,7 +57,7 @@
 			<source src="/video" type="video/mp4">
 			Your browser does not support the video tag.
 			{{#each subtitles}}
-				<track kind='subtitles' src='{{this.path}}' srclang='{{this.langShort}}' label='{{this.lang}}' />
+			<track kind='subtitles' src='{{this.path}}' srclang='{{this.langShort}}' label='{{this.lang}}' />
 			{{/each}}
 		</video>
 	</div>
@@ -90,8 +96,8 @@
 					</span>
 				</div>
 			</div>
-	
-			{{!-- list  of comments --}}
+
+			{{!-- list of comments --}}
 
 			<div class="com-boxes row">
 			</div>
@@ -125,11 +131,11 @@
 	var i = 1;
 	var query;
 
-	window.onscroll = function() {
+	window.onscroll = function () {
 		scrollFunction()
 	};
 
-	$('.btn-drop').on('click', function() {
+	$('.btn-drop').on('click', function () {
 		if (i) {
 			$('.drop-box').css({
 				'display': 'block',
@@ -157,13 +163,13 @@
 			data: JSON.stringify(data),
 			contentType: 'application/json',
 			url: '/comments/get_comments',
-			success: function(res) {
+			success: function (res) {
 				$('.com-boxes').html(res);
 			}
 		})
 	}
 
-	$('document').ready(function() {
+	$('document').ready(function () {
 
 		var encodedUrl = document.location.search.replace("info=", "");
 		var decodedUrl = Base64.decode(encodedUrl);
@@ -177,12 +183,12 @@
 			data: JSON.stringify(data),
 			contentType: 'application/json',
 			url: '/video/cast',
-			success: function(res) {
+			success: function (res) {
 				$('.the-cast').html(res);
 			}
 		});
 
-		$('.nav-item').on('click', function() {
+		$('.nav-item').on('click', function () {
 			$('.nav-item').removeClass('active');
 			$(this).addClass('active');
 			if ($(this).hasClass('upadate-profile')) {
@@ -193,7 +199,7 @@
 				$('.the-movies').css('display', 'block');
 			}
 		})
-	
+
 		$('#myBtn').css({
 			'display': 'none',
 		});
@@ -205,7 +211,7 @@
 		$('.vid_desc').find('p').html(query.desc);
 	})
 
-	$('.comment-btn').on('click', function() {
+	$('.comment-btn').on('click', function () {
 		if ($('.comment').val() != '') {
 			var data = {};
 			data.comment = $('.comment').val();
@@ -216,7 +222,7 @@
 				data: JSON.stringify(data),
 				contentType: 'application/json',
 				url: '/comments',
-				success: function(res) {
+				success: function (res) {
 					getComments(query.title, query.year);
 				}
 			})
@@ -230,7 +236,7 @@
 		}
 	}
 
-	$('.back').on('click', function() {
+	$('.back').on('click', function () {
 		window.location.href = '/home';
 	})
 
